--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=spring-gift
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb
+logging.level.org.springframework.web=DEBUG
+
+jwt.secret=${JWT_SECRET}
