--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,9 @@ spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
 logging.level.org.springframework.web=DEBUG
 
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+
 jwt.secret=${JWT_SECRET}
