refactor: redirect uri도 value 어노테이션으로 처리 및 로그인 버튼 클릭 시 서비스 단에서 redirect 처리하도록 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 
 jwt.secret=${JWT_SECRET}
+
+oauth.kakao.rest-api-key=${KAKAO_REST_API_KEY}
+oauth.kakao.redirect-uri=http://localhost:8080/oauth/kakao/callback
