--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -3,12 +3,12 @@ spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
 logging.level.org.springframework.web=DEBUG
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 
-jwt.secret=${JWT_SECRET}
-
-oauth.kakao.rest-api-key=${KAKAO_REST_API_KEY}
+oauth.kakao.rest-api-key=test-api-key
 oauth.kakao.redirect-uri=http://localhost:8080/oauth/kakao/callback
+
+jwt.secret=test-jwt-secret-key-test-jwt-secret-key
