feat: kakao redirect-uri 실서비스 도메인으로 변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,4 @@ spring.jpa.show-sql=true
 jwt.secret=${JWT_SECRET}
 
 oauth.kakao.rest-api-key=${KAKAO_REST_API_KEY}
-oauth.kakao.redirect-uri=http://localhost:8080/api/oauth/kakao/callback
+oauth.kakao.redirect-uri=https://spring-gift.jun0.dev/api/oauth/kakao/callback
